<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agriculture</string>
	<string name="login_title">智能农业管理系统</string>
	<string name="username">用户名</string>
	<string name="password">密码</string>
	<string name="savepassword">记住密码</string>
	<string name="forgetpassword">忘记密码</string>
	<string name="registration">用户注册</string>
	<string name="cancel">取消</string>
	<string name="login">登陆</string>
	<string name="setserveraddress">服务器地址设置</string>
    <string name="light_title">Light</string>
    <string name="set_value">设定值：</string>
    <string name="envir_value">8888</string>
    <string name="warning">预警</string>
    <string name="normal">正常</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="startlogin">开始登陆</string>
    <string name="blower">风扇</string>
    <string name="water_pump">水泵</string>
    <string name="roadlamp">荧光灯</string>
    <string name="buzzer">蜂鸣报警器</string>
    <string name="status">当前状态：</string>
    <string name="status_off">当前状态：关</string>
    <string name="status_on">当前状态：开</string>
    <string name="air_">空气温度</string>
    <string name="main_title">这里是主页面的标题</string>
    <string name="envir_title">环境指标</string>
    <string name="back">返回</string>
    <string name="envir_charttitle">实时数据</string>
    <string name="history_title">历史数据查询</string>
    <string name="control_title">手动控制</string>
    <string name="setting_title">系统设置</string>
    <string name="languageset">语言设置</string>
</resources>
