<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0e7ac3"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/login_title"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#ffffff" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:layout_marginLeft="10dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/username"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/password"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="#ffffff"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/hint_username"
                    android:maxLength="12"
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/passdword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="8"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <CheckBox
                android:id="@+id/savepassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/savepassword"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forgetpassword"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/registration"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:orientation="horizontal" >
		<LinearLayout 
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center"
		    >
             <Button
            android:id="@+id/cancel"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="#ffffff"
            android:text="@string/cancel"
            android:textSize="16sp" />
		    
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center"
		    >
		     <Button
            android:id="@+id/login"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:background="#ffffff"
            android:text="@string/login"
            android:textSize="16sp" />
		</LinearLayout>
       

       
    </LinearLayout>

    <TextView
        android:id="@+id/setserveraddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="14dp"
        android:text="@string/setserveraddress"
        android:textSize="14sp" />

</LinearLayout>