<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_green"
    android:orientation="vertical"
    android:padding="10dp" 
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/light_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/light_title"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/envir_statu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/normal"
            android:textColor="#ffffff"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/set_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/set_value"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/envir_value"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/sensor_value_bg"
            android:gravity="center"
            android:text="@string/envir_value"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>



</LinearLayout>