<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#000"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/control_title"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/blower" />

                    <TextView
                        android:id="@+id/blower_statu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status" />

                    <ImageView
                        android:id="@+id/blower_img"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@drawable/blower_off" />

                    <Button
                        android:id="@+id/blower_btn"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:background="@drawable/close_btn" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/roadlamp" />

                    <TextView
                        android:id="@+id/roadlamp_statu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status" />

                    <ImageView
                        android:id="@+id/roadlamp_img"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@drawable/roadlamp_off" />

                    <Button
                        android:id="@+id/roadlamp_btn"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:background="@drawable/close_btn" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/water_pump" />

                    <TextView
                        android:id="@+id/waterpump_statu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status" />

                    <ImageView
                        android:id="@+id/waterpump_img"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@drawable/water_pump_off" />

                    <Button
                        android:id="@+id/waterpump_btn"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:background="@drawable/close_btn" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buzzer" />

                    <TextView
                        android:id="@+id/buzzer_statu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status" />

                    <ImageView
                        android:id="@+id/buzzer_img"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@drawable/buzzer_off" />

                    <Button
                        android:id="@+id/buzzer_btn"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:background="@drawable/close_btn" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>